force-app/main/default/objects/User/fields/FICEPI__c.field-meta.xml
<CustomField>
    <fullName>FICEPI__c</fullName>
    <label>FICEPI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>