force-app/main/default/objects/User/fields/Panel_direccion__c.field-meta.xml
<CustomField>
    <fullName>Panel_direccion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Panel dirección</label>
    <type>Checkbox</type>
</CustomField>