force-app/main/default/objects/User/fields/Puede_Desbloquear__c.field-meta.xml
<CustomField>
    <fullName>Puede_Desbloquear__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Puede Desbloquear</label>
    <type>Checkbox</type>
</CustomField>